--- a/bsconfig.json
+++ b/bsconfig.json
@@ -20,7 +20,8 @@
   "bs-dependencies": [
       "reason-react",
       "@glennsl/bs-json",
-      "bs-fetch"
+      "bs-fetch",
+      "bs-webapi"
   ],
   "refmt": 3
 }
