--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-app",
+  "name": "reason-search",
   "version": "0.1.0",
   "scripts": {
     "build": "bsb -make-world",
@@ -17,6 +17,7 @@
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
     "bs-fetch": "^0.3.0",
+    "bs-webapi": "^0.11.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "reason-react": ">=0.4.0"
