--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bs-webapi": "^0.11.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-select": "^2.0.0",
     "reason-react": ">=0.4.0"
   },
   "devDependencies": {
