--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "bsb -clean-world",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack -w",
-    "webpack:production": "NODE_ENV=production webpack"
+      "webpack:production": "NODE_ENV=production webpack",
+      "server": "python3 -m http.server 8080"
   },
   "keywords": [
     "BuckleScript"
